--- a/2018/2018READ.MD
+++ b/2018/2018READ.MD
@@ -10,22 +10,20 @@
 
 #### [《动物农场》](https://book.douban.com/subject/26728835/ "") 
 
->现在是3.12号，才有空来写春节前的一月的读书报告，记得这个月一直忙，只读了一本薄薄的动物农场，去海淀北图借了七本书也就看了这一本，放假前屁颠屁颠全还了回去。读这本书的时候感觉作者把国家政权这个组织比喻的的太透彻了，猪作为革命领导阶级是如何一步一步站上统治地位并不断的剥削下层的动物的劳动力，像极了历史上某个国家的社会主义初级阶段建立过程。动物们革了农场主的命，猪作为领导阶级享受了胜利的果实，其他动物还是底层人民，不变的是换了个好听的说法，却比以前需要付出更大的工作量，最后需要革的是猪的命，一代一代循环往复，归根结底是人类的贪婪吗？还是几千年被奴役管惯了。
+>现在是3.12号，才有空来写春节前的一月的读书报告，记得这个月一直忙，只读了一本薄薄的动物农场，去海淀北图借了七本书也就看了这一本，放假前屁颠屁颠全还了回去。读这本书的时候感觉作者把国家政权这个组织比喻的的太透彻了，猪作为革命领导阶级是如何一步一步站上统治地位并不断的剥削下层的动物的劳动力，像极了历史上某个国家的shehui主义初级阶段建立过程。动物们革了农场主的命，猪作为领导阶级享受了胜利的果实，其他动物还是底层人民，不变的是换了个好听的说法，却比以前需要付出更大的工作量，最后需要革的是猪的命，一代一代循环往复，归根结底是人类的贪婪吗？另外一点人民几千年被中央集权奴役惯了。
 
 
 ## **二月**
 
 #### [《激荡十年，鱼大水大》](https://book.douban.com/subject/27179563/ "") 
 
->2月放了17天的假，一共上了九天的班，史上最爽月份，回家也基本没时间看书，一个月看了一本吴晓波讲08到18的十年故事，这十年算我终于记事的十年。
-
+>2月放了17天的假，一共上了九天的班，史上最爽月份，回家也基本没时间看书，一个月就看了一本吴晓波讲08到18的十年企业故事，这十年算我终于记事和了解社会的十年，从上高中到复读一年到上大学四年，到现在工作两年多，也是我自身经历激荡变化的十年。相对于之前改革开放的前十年，这十年的发展是数倍速前进的，但是感觉市场经济在迅速发展，而国家的反应是滞后性，结合最近火的直播答题被禁，在中国简直是什么火禁什么。任何企业不管你做的再大，最后还得听“人民”代表的领导。看到了在中国做企业的局限性，不过相比改革开放已经进步很多了。另外最后一章作者的总结刻画的太牛了，不同阶级、不同方式在这改革开放四十年的画像，强推。
 
 
 ## **三月**
-####  [《NULL》](https://book.douban.com/subject/11628194/ "")
+####  [《硅谷钢铁侠》](https://book.douban.com/subject/11628194/ "")
 
->NULL
-
+>今天回顾起来工作过的这两家创业中的公司，感觉都不是要认真改变一个行业、颠覆行业生态的，都是对外喊得响亮，对内贪污腐败，私吞投资人的钱，套现跑路的想法，员工也是迷茫的状态，做技术的还好点，运营什么的就更浮躁了，再看马克斯创立公司所做的事情，不需要做到他那样，起码一半总可以吧，还是A型人格靠谱，下次找工作一定要去靠谱的大公司，小公司领导同事鱼龙混杂，素质什么样的都有。
 
 
 ## **四月**
