--- a/2018/2018READ.MD
+++ b/2018/2018READ.MD
@@ -1,78 +1,78 @@
-# 2018¶ÁÊé¼ÇÂ¼ºÍËæ¼Ç
+# 2018è¯»ä¹¦è®°å½•å’Œéšè®°
    
    
-   **SDS**
+
 
    
 
 
-## **Ò»ÔÂ**
+## **ä¸€æœˆ**
 
-#### [¡¶¶¯ÎïÅ©³¡¡·](https://book.douban.com/subject/26728835/ "") 
+#### [ã€ŠåŠ¨ç‰©å†œåœºã€‹](https://book.douban.com/subject/26728835/ "") 
 
->ÏÖÔÚÊÇ3.12ºÅ£¬²ÅÓÐ¿ÕÀ´Ð´´º½ÚÇ°µÄÒ»ÔÂµÄ¶ÁÊé±¨¸æ£¬¼ÇµÃÕâ¸öÔÂÒ»Ö±Ã¦£¬Ö»¶ÁÁËÒ»±¾±¡±¡µÄ¶¯ÎïÅ©³¡£¬È¥º£µí±±Í¼½èÁËÆß±¾ÊéÒ²¾Í¿´ÁËÕâÒ»±¾£¬·Å¼ÙÇ°Æ¨µßÆ¨µßÈ«»¹ÁË»ØÈ¥¡£¶ÁÕâ±¾ÊéµÄÊ±ºò¸Ð¾õ×÷Õß°Ñ¹ú¼ÒÕþÈ¨Õâ¸ö×éÖ¯±ÈÓ÷µÄµÄÌ«Í¸³¹ÁË£¬Öí×÷Îª¸ïÃüÁìµ¼½×¼¶ÊÇÈçºÎÒ»²½Ò»²½Õ¾ÉÏÍ³ÖÎµØÎ»²¢²»¶ÏµÄ°þÏ÷ÏÂ²ãµÄ¶¯ÎïµÄÀÍ¶¯Á¦£¬Ïñ¼«ÁËÀúÊ·ÉÏÄ³¸ö¹ú¼ÒµÄshehuiÖ÷Òå³õ¼¶½×¶Î½¨Á¢¹ý³Ì¡£¶¯ÎïÃÇ¸ïÁËÅ©³¡Ö÷µÄÃü£¬Öí×÷ÎªÁìµ¼½×¼¶ÏíÊÜÁËÊ¤ÀûµÄ¹ûÊµ£¬ÆäËû¶¯Îï»¹ÊÇµ×²ãÈËÃñ£¬²»±äµÄÊÇ»»ÁË¸öºÃÌýµÄËµ·¨£¬È´±ÈÒÔÇ°ÐèÒª¸¶³ö¸ü´óµÄ¹¤×÷Á¿£¬×îºóÐèÒª¸ïµÄÊÇÖíµÄÃü£¬Ò»´úÒ»´úÑ­»·Íù¸´£¬¹é¸ù½áµ×ÊÇÈËÀàµÄÌ°À·Âð£¿ÁíÍâÒ»µãÈËÃñ¼¸Ç§Äê±»ÖÐÑë¼¯È¨Å«ÒÛ¹ßÁË¡£
-
-
-## **¶þÔÂ**
-
-#### [¡¶¼¤µ´Ê®Äê£¬Óã´óË®´ó¡·](https://book.douban.com/subject/27179563/ "") 
-
->2ÔÂ·ÅÁË17ÌìµÄ¼Ù£¬Ò»¹²ÉÏÁË¾ÅÌìµÄ°à£¬Ê·ÉÏ×îË¬ÔÂ·Ý£¬»Ø¼ÒÒ²»ù±¾Ã»Ê±¼ä¿´Êé£¬Ò»¸öÔÂ¾Í¿´ÁËÒ»±¾ÎâÏþ²¨½²08µ½18µÄÊ®ÄêÆóÒµ¹ÊÊÂ£¬ÕâÊ®ÄêËãÎÒÖÕÓÚ¼ÇÊÂºÍÁË½âÉç»áµÄÊ®Äê£¬´ÓÉÏ¸ßÖÐµ½¸´¶ÁÒ»Äêµ½ÉÏ´óÑ§ËÄÄê£¬µ½ÏÖÔÚ¹¤×÷Á½Äê¶à£¬Ò²ÊÇÎÒ×ÔÉí¾­Àú¼¤µ´±ä»¯µÄÊ®Äê¡£Ïà¶ÔÓÚÖ®Ç°¸Ä¸ï¿ª·ÅµÄÇ°Ê®Äê£¬ÕâÊ®ÄêµÄ·¢Õ¹ÊÇÊý±¶ËÙÇ°½øµÄ£¬µ«ÊÇ¸Ð¾õÊÐ³¡¾­¼ÃÔÚÑ¸ËÙ·¢Õ¹£¬¶ø¹ú¼ÒµÄ·´Ó¦ÊÇÖÍºóÐÔ£¬½áºÏ×î½ü»ðµÄÖ±²¥´ðÌâ±»½û£¬ÔÚÖÐ¹ú¼òÖ±ÊÇÊ²Ã´»ð½ûÊ²Ã´¡£ÈÎºÎÆóÒµ²»¹ÜÄã×öµÄÔÙ´ó£¬×îºó»¹µÃÌý¡°ÈËÃñ¡±´ú±íµÄÁìµ¼¡£¿´µ½ÁËÔÚÖÐ¹ú×öÆóÒµµÄ¾ÖÏÞÐÔ£¬²»¹ýÏà±È¸Ä¸ï¿ª·ÅÒÑ¾­½ø²½ºÜ¶àÁË¡£ÁíÍâ×îºóÒ»ÕÂ×÷ÕßµÄ×Ü½á¿Ì»­µÄÌ«Å£ÁË£¬²»Í¬½×¼¶¡¢²»Í¬·½Ê½ÔÚÕâ¸Ä¸ï¿ª·ÅËÄÊ®ÄêµÄ»­Ïñ£¬Ç¿ÍÆ¡£
+>çŽ°åœ¨æ˜¯3.12å·ï¼Œæ‰æœ‰ç©ºæ¥å†™æ˜¥èŠ‚å‰çš„ä¸€æœˆçš„è¯»ä¹¦æŠ¥å‘Šï¼Œè®°å¾—è¿™ä¸ªæœˆä¸€ç›´å¿™ï¼Œåªè¯»äº†ä¸€æœ¬è–„è–„çš„åŠ¨ç‰©å†œåœºï¼ŒåŽ»æµ·æ·€åŒ—å›¾å€Ÿäº†ä¸ƒæœ¬ä¹¦ä¹Ÿå°±çœ‹äº†è¿™ä¸€æœ¬ï¼Œæ”¾å‡å‰å±é¢ å±é¢ å…¨è¿˜äº†å›žåŽ»ã€‚è¯»è¿™æœ¬ä¹¦çš„æ—¶å€™æ„Ÿè§‰ä½œè€…æŠŠå›½å®¶æ”¿æƒè¿™ä¸ªç»„ç»‡æ¯”å–»çš„çš„å¤ªé€å½»äº†ï¼ŒçŒªä½œä¸ºé©å‘½é¢†å¯¼é˜¶çº§æ˜¯å¦‚ä½•ä¸€æ­¥ä¸€æ­¥ç«™ä¸Šç»Ÿæ²»åœ°ä½å¹¶ä¸æ–­çš„å‰¥å‰Šä¸‹å±‚çš„åŠ¨ç‰©çš„åŠ³åŠ¨åŠ›ï¼Œåƒæžäº†åŽ†å²ä¸ŠæŸä¸ªå›½å®¶çš„shehuiä¸»ä¹‰åˆçº§é˜¶æ®µå»ºç«‹è¿‡ç¨‹ã€‚åŠ¨ç‰©ä»¬é©äº†å†œåœºä¸»çš„å‘½ï¼ŒçŒªä½œä¸ºé¢†å¯¼é˜¶çº§äº«å—äº†èƒœåˆ©çš„æžœå®žï¼Œå…¶ä»–åŠ¨ç‰©è¿˜æ˜¯åº•å±‚äººæ°‘ï¼Œä¸å˜çš„æ˜¯æ¢äº†ä¸ªå¥½å¬çš„è¯´æ³•ï¼Œå´æ¯”ä»¥å‰éœ€è¦ä»˜å‡ºæ›´å¤§çš„å·¥ä½œé‡ï¼Œæœ€åŽéœ€è¦é©çš„æ˜¯çŒªçš„å‘½ï¼Œä¸€ä»£ä¸€ä»£å¾ªçŽ¯å¾€å¤ï¼Œå½’æ ¹ç»“åº•æ˜¯äººç±»çš„è´ªå©ªå—ï¼Ÿå¦å¤–ä¸€ç‚¹äººæ°‘å‡ åƒå¹´è¢«ä¸­å¤®é›†æƒå¥´å½¹æƒ¯äº†ã€‚
 
 
-## **ÈýÔÂ**
-####  [¡¶¹è¹È¸ÖÌúÏÀ¡·](https://book.douban.com/subject/11628194/ "")
+## **äºŒæœˆ**
 
->½ñÌì»Ø¹ËÆðÀ´¹¤×÷¹ýµÄÕâÁ½¼Ò´´ÒµÖÐµÄ¹«Ë¾£¬¸Ð¾õ¶¼²»ÊÇÒªÈÏÕæ¸Ä±äÒ»¸öÐÐÒµ¡¢µß¸²ÐÐÒµÉúÌ¬µÄ£¬¶¼ÊÇ¶ÔÍâº°µÃÏìÁÁ£¬¶ÔÄÚÌ°ÎÛ¸¯°Ü£¬Ë½ÍÌÍ¶×ÊÈËµÄÇ®£¬Ì×ÏÖÅÜÂ·µÄÏë·¨£¬Ô±¹¤Ò²ÊÇÃÔÃ£µÄ×´Ì¬£¬×ö¼¼ÊõµÄ»¹ºÃµã£¬ÔËÓªÊ²Ã´µÄ¾Í¸ü¸¡ÔêÁË£¬ÔÙ¿´Âí¿ËË¹´´Á¢¹«Ë¾Ëù×öµÄÊÂÇé£¬²»ÐèÒª×öµ½ËûÄÇÑù£¬ÆðÂëÒ»°ë×Ü¿ÉÒÔ°É£¬»¹ÊÇAÐÍÈË¸ñ¿¿Æ×£¬ÏÂ´ÎÕÒ¹¤×÷Ò»¶¨ÒªÈ¥¿¿Æ×µÄ´ó¹«Ë¾£¬Ð¡¹«Ë¾Áìµ¼Í¬ÊÂÓãÁú»ìÔÓ£¬ËØÖÊÊ²Ã´ÑùµÄ¶¼ÓÐ¡£
+#### [ã€Šæ¿€è¡åå¹´ï¼Œé±¼å¤§æ°´å¤§ã€‹](https://book.douban.com/subject/27179563/ "") 
 
-
-## **ËÄÔÂ**
-#### [¡¶NULL¡·](https://book.douban.com/subject/20381801/ "")
-
->NULL
+>2æœˆæ”¾äº†17å¤©çš„å‡ï¼Œä¸€å…±ä¸Šäº†ä¹å¤©çš„ç­ï¼Œå²ä¸Šæœ€çˆ½æœˆä»½ï¼Œå›žå®¶ä¹ŸåŸºæœ¬æ²¡æ—¶é—´çœ‹ä¹¦ï¼Œä¸€ä¸ªæœˆå°±çœ‹äº†ä¸€æœ¬å´æ™“æ³¢è®²08åˆ°18çš„åå¹´ä¼ä¸šæ•…äº‹ï¼Œè¿™åå¹´ç®—æˆ‘ç»ˆäºŽè®°äº‹å’Œäº†è§£ç¤¾ä¼šçš„åå¹´ï¼Œä»Žä¸Šé«˜ä¸­åˆ°å¤è¯»ä¸€å¹´åˆ°ä¸Šå¤§å­¦å››å¹´ï¼Œåˆ°çŽ°åœ¨å·¥ä½œä¸¤å¹´å¤šï¼Œä¹Ÿæ˜¯æˆ‘è‡ªèº«ç»åŽ†æ¿€è¡å˜åŒ–çš„åå¹´ã€‚ç›¸å¯¹äºŽä¹‹å‰æ”¹é©å¼€æ”¾çš„å‰åå¹´ï¼Œè¿™åå¹´çš„å‘å±•æ˜¯æ•°å€é€Ÿå‰è¿›çš„ï¼Œä½†æ˜¯æ„Ÿè§‰å¸‚åœºç»æµŽåœ¨è¿…é€Ÿå‘å±•ï¼Œè€Œå›½å®¶çš„ååº”æ˜¯æ»žåŽæ€§ï¼Œç»“åˆæœ€è¿‘ç«çš„ç›´æ’­ç­”é¢˜è¢«ç¦ï¼Œåœ¨ä¸­å›½ç®€ç›´æ˜¯ä»€ä¹ˆç«ç¦ä»€ä¹ˆã€‚ä»»ä½•ä¼ä¸šä¸ç®¡ä½ åšçš„å†å¤§ï¼Œæœ€åŽè¿˜å¾—å¬â€œäººæ°‘â€ä»£è¡¨çš„é¢†å¯¼ã€‚çœ‹åˆ°äº†åœ¨ä¸­å›½åšä¼ä¸šçš„å±€é™æ€§ï¼Œä¸è¿‡ç›¸æ¯”æ”¹é©å¼€æ”¾å·²ç»è¿›æ­¥å¾ˆå¤šäº†ã€‚å¦å¤–æœ€åŽä¸€ç« ä½œè€…çš„æ€»ç»“åˆ»ç”»çš„å¤ªç‰›äº†ï¼Œä¸åŒé˜¶çº§ã€ä¸åŒæ–¹å¼åœ¨è¿™æ”¹é©å¼€æ”¾å››åå¹´çš„ç”»åƒï¼Œå¼ºæŽ¨ã€‚
 
 
-## **ÎåÔÂ**
-#### [¡¶NULL¡·](https://book.douban.com/subject/26163454/ "")
+## **ä¸‰æœˆ**
+####  [ã€Šç¡…è°·é’¢é“ä¾ ã€‹](https://book.douban.com/subject/11628194/ "")
+
+>ä»Šå¤©å›žé¡¾èµ·æ¥å·¥ä½œè¿‡çš„è¿™ä¸¤å®¶åˆ›ä¸šä¸­çš„å…¬å¸ï¼Œæ„Ÿè§‰éƒ½ä¸æ˜¯è¦è®¤çœŸæ”¹å˜ä¸€ä¸ªè¡Œä¸šã€é¢ è¦†è¡Œä¸šç”Ÿæ€çš„ï¼Œéƒ½æ˜¯å¯¹å¤–å–Šå¾—å“äº®ï¼Œå¯¹å†…è´ªæ±¡è…è´¥ï¼Œç§åžæŠ•èµ„äººçš„é’±ï¼Œå¥—çŽ°è·‘è·¯çš„æƒ³æ³•ï¼Œå‘˜å·¥ä¹Ÿæ˜¯è¿·èŒ«çš„çŠ¶æ€ï¼ŒåšæŠ€æœ¯çš„è¿˜å¥½ç‚¹ï¼Œè¿è¥ä»€ä¹ˆçš„å°±æ›´æµ®èºäº†ï¼Œå†çœ‹é©¬å…‹æ–¯åˆ›ç«‹å…¬å¸æ‰€åšçš„äº‹æƒ…ï¼Œä¸éœ€è¦åšåˆ°ä»–é‚£æ ·ï¼Œèµ·ç ä¸€åŠæ€»å¯ä»¥å§ï¼Œè¿˜æ˜¯Aåž‹äººæ ¼é è°±ï¼Œä¸‹æ¬¡æ‰¾å·¥ä½œä¸€å®šè¦åŽ»é è°±çš„å¤§å…¬å¸ï¼Œå°å…¬å¸é¢†å¯¼åŒäº‹é±¼é¾™æ··æ‚ï¼Œç´ è´¨ä»€ä¹ˆæ ·çš„éƒ½æœ‰ã€‚
+
+
+## **å››æœˆ**
+#### [ã€ŠNULLã€‹](https://book.douban.com/subject/20381801/ "")
 
 >NULL
 
 
-## **ÁùÔÂ**
-#### [¡¶NULL¡·](https://book.douban.com/subject/27015112/ "")
-
->NULL
- 
-
-## **ÆßÔÂ**
-#### [¡¶NULL¡·](https://book.douban.com/subject/3211779/ "")
-
->NULL
-¡¡¡¡
-
-## **°ËÔÂ**
-#### [¡¶NULL¡·](https://book.douban.com/subject/1082406/ "")
+## **äº”æœˆ**
+#### [ã€ŠNULLã€‹](https://book.douban.com/subject/26163454/ "")
 
 >NULL
 
 
-## **¾ÅÔÂ**
-#### [¡¶NULL¡·](https://book.douban.com/subject/25968115/ "")
+## **å…­æœˆ**
+#### [ã€ŠNULLã€‹](https://book.douban.com/subject/27015112/ "")
 
 >NULL
  
- 
-## **Ê®ÔÂ**
-#### [¡¶NULL¡·](https://book.douban.com/subject/25969067/ "")
+
+## **ä¸ƒæœˆ**
+#### [ã€ŠNULLã€‹](https://book.douban.com/subject/3211779/ "")
+
+>NULL
+ã€€ã€€
+
+## **å…«æœˆ**
+#### [ã€ŠNULLã€‹](https://book.douban.com/subject/1082406/ "")
+
+>NULL
+
+
+## **ä¹æœˆ**
+#### [ã€ŠNULLã€‹](https://book.douban.com/subject/25968115/ "")
 
 >NULL
  
-## **Ê®Ò»ÔÂ**
-#### [¡¶NULL¡·](https://book.douban.com/subject/26648884/ "")
+ 
+## **åæœˆ**
+#### [ã€ŠNULLã€‹](https://book.douban.com/subject/25969067/ "")
+
+>NULL
+ 
+## **åä¸€æœˆ**
+#### [ã€ŠNULLã€‹](https://book.douban.com/subject/26648884/ "")
 
 >NULL
 
-## **Ê®¶þÔÂ**
-#### [¡¶NULL¡·](https://book.douban.com/subject/24859822/ "")
+## **åäºŒæœˆ**
+#### [ã€ŠNULLã€‹](https://book.douban.com/subject/24859822/ "")
 
 >NULL
