--- a/2018/2018READ.MD
+++ b/2018/2018READ.MD
@@ -27,10 +27,9 @@
 
 
 ## **四月**
-#### [《NULL》](https://book.douban.com/subject/20381801/ "")
+#### [《长夜难明》](https://book.douban.com/subject/26923390/ "")[《三体》](https://book.douban.com/subject/6518605/ "")
 
->NULL
-
+>4月中旬左右看完《三体》，大刘的脑洞太牛逼了，各种物理概念，能够让学物理的理科生的颅内高潮。三体运动模型，智子从高纬度向低纬度展开，各种之前想都没想过的概念看起来很爽。4.22读完《长夜难明》，检察官终其一生为了搬到官场幕后大boss，最后不惜自杀来引起轰动，各种显示的无奈，最后去豆瓣看到一个评论：盛世蝼蚁，浑身鸡皮疙瘩起来那种，那几年社会风气是那样，大概04到14吧，有权有势的为非作歹，这几年反腐打大老虎还好点。回到书本身上，故事可以，但是语言比较苍白，用豆瓣网友的话:“用结构精密的技巧撑托起寡淡乏味的文字”这样稍显尴尬的境地。
 
 ## **五月**
 #### [《NULL》](https://book.douban.com/subject/26163454/ "")
