--- a/2018/2018READ.MD
+++ b/2018/2018READ.MD
@@ -33,7 +33,7 @@
 ## **五月**
 #### [《NULL》](https://book.douban.com/subject/26163454/ "")
 
->NULL
+>5.5号上午 11.30左右看完三体二，目前三体全集已读20小时，多午休路上睡前看，之前在b站看过40分钟的故事情节视频，剧情大体了解，导致现在很后悔，没法感受大刘剧情上轰击你脑洞的感觉，但是仍然有很多眼前一亮的想法，先写这些，看完第三部在整理
 
 
 ## **六月**
