--- a/2018/2018READ.MD
+++ b/2018/2018READ.MD
@@ -31,9 +31,9 @@
 >4月中旬左右看完《三体》，大刘的脑洞太牛逼了，各种物理概念，能够让学物理的理科生的颅内高潮。三体运动模型，智子从高纬度向低纬度展开，各种之前想都没想过的概念看起来很爽。4.22读完《长夜难明》，检察官终其一生为了搬到官场幕后大boss，最后不惜自杀来引起轰动，各种显示的无奈，最后去豆瓣看到一个评论：盛世蝼蚁，浑身鸡皮疙瘩起来那种，那几年社会风气是那样，大概04到14吧，有权有势的为非作歹，这几年反腐打大老虎还好点。回到书本身上，故事可以，但是语言比较苍白，用豆瓣网友的话:“用结构精密的技巧撑托起寡淡乏味的文字”这样稍显尴尬的境地。
 
 ## **五月**
-#### [《NULL》](https://book.douban.com/subject/26163454/ "")
+#### [《三体全集》](https://book.douban.com/subject/6518605/ "")
 
->5.5号上午 11.30左右看完三体二，目前三体全集已读20小时，多午休路上睡前看，之前在b站看过40分钟的故事情节视频，剧情大体了解，导致现在很后悔，没法感受大刘剧情上轰击你脑洞的感觉，但是仍然有很多眼前一亮的想法，先写这些，看完第三部在整理
+>5.5号上午 11.30左右看完三体二，目前三体全集已读20小时，多午休路上睡前看，之前在b站看过40分钟的故事情节视频，剧情大体了解，导致现在很后悔，没法感受大刘剧情上轰击你脑洞的感觉，但是仍然有很多眼前一亮的想法，先写这些，看完第三部在整理．5.17中午再公司看完了《黑暗森林》，对自己的影响，好好过完自己这一生吧，多陪家人，选择开心舒坦点的，之前坚定不移的选择北漂，现在内心的这种想法再慢慢松动．虽说这个决定不能说因为一部科幻小说就改变，也应该是我自己综合各种因素考量之后在做出的选择．摘录别人写的想法，感情的最大敌人是时间，除了时间就是距离．一段感情会因岁月而加深，一如程心之前对云天明脑补的愧疚之爱．一段感情会因为距离的长短而变化，远在天边的云天明终比不过陪伴身边十几天的关一帆．一段感情又会因岁月的流逝而模糊消失，一如程心冬眠十几年后，云天明早就消失不知多久，一个消失的人终比不过存在的人，时间时爱情的杀手，距离是爱情的毒药，陪伴才是感情最好的升温剂．
 
 
 ## **六月**
