--- a/2018/2018READ.MD
+++ b/2018/2018READ.MD
@@ -39,13 +39,13 @@
 ## **六月**
 #### [《NULL》](https://book.douban.com/subject/27015112/ "")
 
->今天2018.6.26,看完三体一个月了,6.18京东买了一套<银河帝国>和吴军博士的<文明之光>/<浪潮之巅>,到现在一个月了,还没看完一本,
+>今天2018.6.26,看完三体一个月了,6.18京东买了一套<银河帝国>和吴军博士的<文明之光>/<浪潮之巅>,到现在一个月了,还没看完一本.
  
 
 ## **七月**
 #### [《NULL》](https://book.douban.com/subject/3211779/ "")
 
->NULL
+>七月看完了<浪潮之巅上>
 　　
 
 ## **八月**
