--- a/2018/2018READ.MD
+++ b/2018/2018READ.MD
@@ -45,8 +45,7 @@
 ## **七月**
 #### [《NULL》](https://book.douban.com/subject/3211779/ "")
 
->七月看完了<浪潮之巅上>
-　　
+>七月看完了<浪潮之巅上>,主要介绍了硅谷科技公司的兴衰史,以及硅谷的兴起和斯坦福大学与硅谷发展的关系,看到里面讲的现在教育体系是如何形成的,对西方优秀大学里面的先进教育理念深深的触动,回顾下自己的学生时代,在大学阶段从来没有去考虑过为什么大学是这样的,为什么要考大学,也没有主动考虑过大学期间该如何主动学习,如何去开拓眼界,反而大学期间疯狂挂科,和宿舍人一起疯狂玩游戏,可以说是随波逐流,缺乏独立自我思考能力,也意识到环境对人的影响真的很大很大,
 
 ## **八月**
 #### [《NULL》](https://book.douban.com/subject/1082406/ "")
