--- a/2018/2018READ.MD
+++ b/2018/2018READ.MD
@@ -43,14 +43,14 @@
  
 
 ## **七月**
-#### [《NULL》](https://book.douban.com/subject/3211779/ "")
+#### [《浪潮之巅（第三版）(上)》](https://book.douban.com/subject/26792439/ "")
 
 >七月看完了<浪潮之巅上>,主要介绍了硅谷科技公司的兴衰史,以及硅谷的兴起和斯坦福大学与硅谷发展的关系,看到里面讲的现在教育体系是如何形成的,对西方优秀大学里面的先进教育理念深深的触动,回顾下自己的学生时代,在大学阶段从来没有去考虑过为什么大学是这样的,为什么要考大学,也没有主动考虑过大学期间该如何主动学习,如何去开拓眼界,反而大学期间疯狂挂科,和宿舍人一起疯狂玩游戏,可以说是随波逐流,缺乏独立自我思考能力,也意识到环境对人的影响真的很大很大,
 
 ## **八月**
-#### [《NULL》](https://book.douban.com/subject/1082406/ "")
+#### [《浪潮之巅（第三版）(下)》](https://book.douban.com/subject/26792439/ "")
 
->NULL
+>八月十四号看完了下部,看完感觉里面好多值得我去深入学习的点,金融知识(对金融危机起因的探讨),企业管理知识(未来公司与员工关系的分析),公司基因决定论的观点,以及如何判断一家公司的好坏,对未来新领域的预测....吴军作为计算机博士,能整理出这方面的知识,可见吴军博士的知识广度和宽度,也思考了中国这种教育模式下自身受到教育的片面,这种分文理科的偏职业化的教育更适合快速发展的工业国,也必然会导致一部分并不喜欢的人
 
 
 ## **九月**
