--- a/2018/2018READ.MD
+++ b/2018/2018READ.MD
@@ -50,7 +50,7 @@
 ## **八月**
 #### [《浪潮之巅（第三版）(下)》](https://book.douban.com/subject/26792439/ "")
 
->八月十四号看完了下部,看完感觉里面好多值得我去深入学习的点,金融知识(对金融危机起因的探讨),企业管理知识(未来公司与员工关系的分析),公司基因决定论的观点,以及如何判断一家公司的好坏,对未来新领域的预测....吴军作为计算机博士,能整理出这方面的知识,可见吴军博士的知识广度和宽度,也思考了中国这种教育模式下自身受到教育的片面,这种分文理科的偏职业化的教育更适合快速发展的工业国,也必然会导致一部分并不喜欢的人
+>八月十四号看完了下部,看完感觉里面好多值得我去深入学习的点,金融知识(对金融危机起因的探讨),企业管理知识(未来公司与员工关系的分析),公司基因决定论的观点,以及如何判断一家公司的好坏,对未来新领域的预测....吴军作为计算机博士,能拥有并整理出这方面的知识,可见吴军博士的知识广度和宽度,也思考了中国这种教育模式下自身受到教育的片面,这种分文理科的偏职业化的教育更适合快速发展的工业国,也必然会导致一部分所学所做并非自己真心喜欢,但是又迫于社会,自身经济等各种因素就这样度过被"安排",被"素质教育"的一生,这些人相比以后能去做自己喜欢的事的00后们是苦难的,但是往前比,他们又是幸运的,这也算是社会在个体人身上的写照了吧.想起来自己初中时候还是挺喜欢地理历史的,但是高中分文理还是选择了理科,大学时对于专业的学习也算不明不白,每一次选择不知道是什么推着自己做的选择,深深觉得自己需要多补补文史类的知识.
 
 
 ## **九月**
