--- a/2018/2018READ.MD
+++ b/2018/2018READ.MD
@@ -56,13 +56,13 @@
 ## **九月**
 #### [《NULL》](https://book.douban.com/subject/25968115/ "")
 
->NULL
+>硅谷之谜，人类群星闪耀时，
  
  
 ## **十月**
 #### [《NULL》](https://book.douban.com/subject/25969067/ "")
 
->NULL
+>巨人的陨落
  
 ## **十一月**
 #### [《NULL》](https://book.douban.com/subject/26648884/ "")
